     and `py3qt5` implementations verbosely, even if one is not installed.
     [#2199, #2201]
   * Set the `DesktopFileName` in `scripts/python/app/NUT-Monitor-py3qt5`,
     this binds the application with the desktop file and allow the Open
     Desktop compatible implementation to display the proper icon and
     application name. [#2205]

 - nut-usbinfo.pl, nut-scanner and libnutscan:
   * USB VendorID:ProductID support list files generated by the script for
     different OS frameworks now include a comment with other possibly
     compatible driver names, where the respective file format allows for
     comments.
   * Added the concept of `alt_driver_names` in `nutscan_device_t` structure
     for ability to suggest a comment with other possibly compatible driver
     names in configuration snippets generated by `nut-scanner`; practical
     support implemented for USB connected drivers. Library API version
     bumped to 2.3.0 accordingly.
   * Command-line option `-U` for USB scan can now be specified several times
     to increase the detail level about hardware link to the device (this was
     previously always suggested, but may be not reliable if USB enumeration
     gets changed over time). [#2221]
   * Added generation of FreeBSD/pfSense quirks for USB devices supported
     by NUT (may get installed to `$datadir` e.g. `/usr/local/share/nut`
     and need to be pasted into your `/boot/loader.conf.local`). [#2159]
   * nut-scanner can now discover NUT simulated devices (.dev & .seq files)
     located in your sysconfig directory
   * nut-scanner now report 'dummy-ups' as driver when scanning NUT with
     Old or Avahi method.

 - upsd: Fixed conditions for "no listening interface available" diagnosis
   to check how many listeners we succeeded with, not whether the first one
   succeeded or not. If not all requested (non-localhost) listeners were
   available, default to fail the daemon start-up attempt; support for an