@@ -4,7 +4,11 @@ NUTSCAN_ADD_OPTION_TO_DEVICE(3)
 NAME
 ----
 
-nutscan_add_option_to_device - Add option data to the specified device.
+nutscan_add_option_to_device - Add enabled option data to the specified device.
+
+nutscan_add_commented_option_to_device - Add option data to the specified device
+with an optional comment tag for options suggested but not currently enabled for
+actual use.
 
 SYNOPSIS
 --------
@@ -15,6 +19,13 @@ SYNOPSIS
         nutscan_device_t * device,
         char * option_name,
         char * value);
+
+ /* Since libnutscan version 2.5.0 */
+ void nutscan_add_commented_option_to_device(
+        nutscan_device_t * device,
+        char * option_name,
+        char * value,
+        char * comment_tag);
 
 
 DESCRIPTION
@@ -35,9 +46,15 @@ its `type`, its `driver` name, its `port` and any number of optional data.
 
 The *nutscan_add_option_to_device()* adds an optional data in the
 given device. Optional data are made of an 'option_name' and an
-associated 'value'. Copies of 'option_name' and 'value' are stored
-in the device, so the caller can safely free both of the original
-strings used as arguments.
+associated 'value', and optionally a 'comment_tag'. Copies of the
+'option_name', 'value' and 'comment_tag' are stored in the device,
+so the caller can safely free all of the original strings used as
+arguments.
+
+NOTE: A non-`NULL` value of the 'comment_tag' makes the option not-enabled
+for current use. Depending on the output format, it may be either completely
+ignored, or rendered as a comment with this value as a prefix (a zero-length
+string `"\0"` may be passed to have no prefix).
 
 Such options and their values may be further sanity-checked and reported
 as warnings by *nutscan_display_sanity_check()* dispatcher and its related
