@@ -77,6 +77,8 @@ https://github.com/networkupstools/nut/milestone/10
      application name. [#2205]
 
  - nut-usbinfo.pl, nut-scanner and libnutscan:
+   * Library API version for `libnutscan` was bumped from 2.2.0 to 2.5.0
+     during evolution of this NUT release.
    * USB VendorID:ProductID support list files generated by the script for
      different OS frameworks now include a comment with other possibly
      compatible driver names, where the respective file format allows for
@@ -84,8 +86,10 @@ https://github.com/networkupstools/nut/milestone/10
    * Added the concept of `alt_driver_names` in `nutscan_device_t` structure
      for ability to suggest a comment with other possibly compatible driver
      names in configuration snippets generated by `nut-scanner`; practical
-     support implemented for USB connected drivers. Library API version
-     bumped to 2.3.0 accordingly.
+     support implemented for USB connected drivers.
+   * Added the concept of commented-away suggested option values `comment_tag`
+     and a method to `nutscan_add_commented_option_to_device()`, instead of
+     hacks in prepared config data which broke some use-cases. [#2221]
    * Command-line option `-U` for USB scan can now be specified several times
      to increase the detail level about hardware link to the device (this was
      previously always suggested, but may be not reliable if USB enumeration
